2008-10-27  Stefan Kost  <ensonic@users.sf.net>

	* gst/autodetect/Makefile.am:
	* gst/autodetect/gstautoaudiosink.c:
	* gst/autodetect/gstautoaudiosrc.c:
	* gst/autodetect/gstautoaudiosrc.h:
	* gst/autodetect/gstautodetect.c:
	* gst/autodetect/gstautovideosink.c:
	* gst/autodetect/gstautovideosrc.c:
	* gst/autodetect/gstautovideosrc.h:
	  Implement src plugins. Little code/string cleanup in the sinks.
	  Fixes #523813.


2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Peter Kjellerstedt <pkj at axis com>

	* gst/matroska/matroska-mux.c: (gst_matroska_mux_reset),
	(gst_matroska_mux_request_new_pad), (gst_matroska_mux_release_pad):
	Fix a memory leak when pads are requested but the pipeline never
	goes into PLAYING.

	Correctly remove request pads, no matter if they have collected
	data or not.

	Fixes bug #557710.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: <lrn1986 at gmail dot com>

	* gst/udp/gstudpnetutils.h:
	Define the correct WINVER so getaddinfo() can be used when using
	mingw32. Fixes bug #557294.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: <lrn1986 at gmail dot com>

	* gst/udp/gstdynudpsink.c: (gst_dynudpsink_render):
	* gst/udp/gstmultiudpsink.c: (gst_multiudpsink_render):
	* gst/udp/gstudpsrc.c: (gst_udpsrc_create):
	Fix "argument type mismatch" compiler warnings on Windows.
	Fixes bug #557293.

2008-10-27  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/equalizer/gstiirequalizer.c: (update_coefficients):
	Don't calculate the filter coefficients for every single buffer
	but only when it's needed. Fixes bug #557260.

2008-10-26  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to development -> 0.10.11.1

2008-10-25  Jan Schmidt  <jan.schmidt@sun.com>

	* gst-plugins-good.doap:
	Fix version number of 0.10.11 release in doap file

=== release 0.10.11 ===

2008-10-24  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac: